NOISSUE Refactor process management in ModernLauncher and improve applet instantiation in OneSixLauncher
Signed-off-by: Mehmet Samet Duman <yongdohyun@projecttick.org>